--- a/nodes/klicktipp-signout.html
+++ b/nodes/klicktipp-signout.html
@@ -31,7 +31,7 @@
         <dt>On success:</dt>
         <dd>
             <ul>
-                <li><code>msg.payload</code> - An object containing <code>success: true</code> if the untagging operation was successful.</li>
+                <li><code>msg.payload</code> - Will be <code>{ success: true }</code>.</li>
             </ul>
         </dd>
         <dt>On failure:</dt>
