--- a/nodes/klicktipp-field-index.html
+++ b/nodes/klicktipp-field-index.html
@@ -33,8 +33,8 @@
         <dt>On failure:</dt>
         <dd>
             <ul>
-                <li><code>msg.payload</code> will be <code>null</code>.</li>
-                <li><code>msg.error</code> will contain an error message describing what went wrong.</li>
+                <li><code>msg.payload</code> - Will be <code>{ success: false }</code>.</li>
+                <li><code>msg.error</code> - Will contain an error message describing what went wrong.</li>
             </ul>
         </dd>
     </dl>
@@ -47,7 +47,7 @@
     <p>
         This node retrieves all contact fields associated with the user's KlickTipp account. It requires valid session information
         (<code>sessionId</code> and <code>sessionName</code>) to be passed in <code>msg.klicktipp</code>. On success, the list of
-        contact fields is returned in <code>msg.payload</code>. On failure, <code>msg.payload</code> will be <code>null</code>,
+        contact fields is returned in <code>msg.payload</code>. On failure, <code>msg.payload</code> will be <code>{ success: false }</code>,
         and the error message will be stored in <code>msg.error</code>.
     </p>
 </script>
