--- a/nodes/klicktipp-login.html
+++ b/nodes/klicktipp-login.html
@@ -21,8 +21,19 @@
                 <li><code>sessionName</code> - The session name (cookie) to be used in subsequent requests.</li>
             </ul>
         </dd>
-        <dt>msg.error<span class="property-type">string</span></dt>
-        <dd>An error message if the login fails (e.g., due to missing username or password).</dd>
+        <dd>
+            On success:
+            <ul>
+                <li><code>msg.payload</code> - Will be <code>{ success: true }</code>.</li>
+            </ul>
+        </dd>
+        <dd>
+            On failure:
+            <ul>
+                <li><code>msg.payload</code> - Will be <code>{ success: false }</code>.</li>
+                <li><code>msg.error</code> - An error message indicating why the request failed.</li>
+            </ul>
+        </dd>
     </dl>
     <h3>Node Status</h3>
     <ul>
@@ -31,7 +42,10 @@
     </ul>
     <h3>Details</h3>
     <p>This node requires the <strong>KlickTipp Config</strong> node to be configured with a valid username and password.</p>
-    <p>The session information (session ID and session name) is stored in <code>msg.klicktipp</code> and can be used by other KlickTipp nodes in the flow. If the login fails, an error message will be returned in <code>msg.error</code>.</p>
+    <p>
+        The session information (session ID and session name) is stored in <code>msg.klicktipp</code> and can be used by other KlickTipp nodes in the flow.
+        If the login fails, an error message will be returned in <code>msg.error</code>, and <code>msg.payload</code> will contain <code>{ success: false }</code>.
+    </p>
 </script>
 
 <script type="text/javascript">
