--- a/nodes/klicktipp-logout.html
+++ b/nodes/klicktipp-logout.html
@@ -24,16 +24,15 @@
     </dl>
     <h3>Outputs</h3>
     <dl class="message-properties">
-        <dt>msg.payload <span class="property-type">object</span></dt>
         <dd>
             On success:
             <ul>
-                <li><code>success</code> - A boolean value indicating the logout was successful (<code>true</code>).</li>
+                <li><code>msg.payload</code> - Will be <code>{ success: true }</code>.</li>
             </ul>
             On failure:
             <ul>
-                <li><code>success</code> - A boolean value indicating the logout failed (<code>false</code>).</li>
-                <li><code>error</code> - The error message if the logout fails.</li>
+                <li><code>msg.payload</code> - Will be <code>{ success: false }</code>.</li>
+                <li><code>msg.error</code> - The error message if the logout fails.</li>
             </ul>
         </dd>
     </dl>
