--- a/nodes/klicktipp-subscribe.html
+++ b/nodes/klicktipp-subscribe.html
@@ -44,7 +44,7 @@
         <dt>On failure:</dt>
         <dd>
             <ul>
-                <li><code>msg.payload</code> will be <code>null</code>.</li>
+                <li><code>msg.payload</code> - Will be <code>{ success: false }</code>.</li>
                 <li><code>msg.error</code> - An error message describing what went wrong.</li>
             </ul>
         </dd>
@@ -58,7 +58,8 @@
     <p>
         This node subscribes a user to a KlickTipp list using either an email address or an SMS number. You can optionally provide additional
         fields, tags, or a specific list for the subscription. This node requires session information to be passed in <code>msg.klicktipp</code>
-        containing <code>sessionId</code> and <code>sessionName</code> from a successful login.
+        containing <code>sessionId</code> and <code>sessionName</code> from a successful login. On failure,
+        an error message will be returned in <code>msg.error</code> and <code>msg.payload</code> will contain <code>{ success: false }</code>.
     </p>
 </script>
 
