--- a/nodes/klicktipp-subscriber-get.html
+++ b/nodes/klicktipp-subscriber-get.html
@@ -40,7 +40,7 @@
         <dt>On failure:</dt>
         <dd>
             <ul>
-                <li><code>msg.payload</code> - Will be <code>null</code>.</li>
+                <li><code>msg.payload</code> - Will be <code>{ success: false }</code>>.</li>
                 <li><code>msg.error</code> - A string describing the error that occurred (e.g., "Missing subscriber ID" or API error message).</li>
             </ul>
         </dd>
@@ -55,7 +55,7 @@
         This node retrieves information about a specific subscriber in KlickTipp using their subscriber ID. The subscriber ID must be provided in
         <code>msg.payload.subscriberId</code>. Valid session information, including <code>sessionId</code> and <code>sessionName</code>,
         must also be provided in <code>msg.klicktipp</code>. If the operation is successful, the subscriber's details will be returned in
-        <code>msg.payload</code>. On failure, <code>msg.payload</code> will be <code>null</code>, and an error message will be returned in
+        <code>msg.payload</code>. On failure, <code>msg.payload</code> will contain <code>{ success: false }</code>, and an error message will be returned in
         <code>msg.error</code>.
     </p>
 </script>
