--- a/nodes/klicktipp-subscriber-index.html
+++ b/nodes/klicktipp-subscriber-index.html
@@ -33,7 +33,7 @@
         <dt>On failure:</dt>
         <dd>
             <ul>
-                <li><code>msg.payload</code> - Will be <code>null</code>.</li>
+                <li><code>msg.payload</code> - Will be <code>{ success: false }</code>>.</li>
                 <li><code>msg.error</code> - A string describing the error that occurred (e.g., "Unknown error" or API error message).</li>
             </ul>
         </dd>
@@ -47,8 +47,8 @@
     <p>
         This node retrieves a list of all active subscribers in KlickTipp. The node requires valid session information,
         including the <code>sessionId</code> and <code>sessionName</code> in <code>msg.klicktipp</code>. If the request is successful,
-        the output message will contain an array of subscriber IDs in <code>msg.payload</code>. On failure, <code>msg.payload</code> will be
-        <code>null</code>, and an error message will be returned in <code>msg.error</code>.
+        the output message will contain an array of subscriber IDs in <code>msg.payload</code>. On failure, <code>msg.payload</code> will
+        contain <code>{ success: false }</code>, and an error message will be returned in <code>msg.error</code>.
     </p>
 </script>
 
