--- a/nodes/klicktipp-subscriber-search.html
+++ b/nodes/klicktipp-subscriber-search.html
@@ -40,7 +40,7 @@
         <dt>On failure:</dt>
         <dd>
             <ul>
-                <li><code>msg.payload</code> - Will be <code>null</code>.</li>
+                <li><code>msg.payload</code> - Will be <code>{ success: false }</code>.</li>
                 <li><code>msg.error</code> - A string describing the error that occurred (e.g., "Missing email" or API error message).</li>
             </ul>
         </dd>
@@ -55,8 +55,8 @@
         This node searches for a subscriber in KlickTipp using their email address. The email address must be provided in
         <code>msg.payload.email</code>. Valid session information, including <code>sessionId</code> and <code>sessionName</code>,
         must also be provided in <code>msg.klicktipp</code>. If the subscriber is found, the subscriber details will be returned in
-        <code>msg.payload</code>. On failure, <code>msg.payload</code> will be <code>null</code>, and an error message will be returned in
-        <code>msg.error</code>.
+        <code>msg.payload</code>. On failure, <code>msg.payload</code> will
+        contain <code>{ success: false }</code>, and an error message will be returned in <code>msg.error</code>.
     </p>
 </script>
 
