--- a/nodes/klicktipp-subscription-process-get-redirect.html
+++ b/nodes/klicktipp-subscription-process-get-redirect.html
@@ -32,14 +32,14 @@
     </dl>
     <h3>Outputs</h3>
     <dl class="message-properties">
-        <dt>msg.klicktipp <span class="property-type">object</span></dt>
         <dd>
             On success:
             <ul>
-                <li><code>redirectionUrl</code> - The URL to which the subscriber will be redirected for the specified subscription process.</li>
+                <li><code>msg.payload</code> - The URL to which the subscriber will be redirected for the specified subscription process.</li>
             </ul>
             On failure:
             <ul>
+            	<li><code>msg.payload</code> - Will be <code>{ success: false }</code>.</li>
                 <li><code>error</code> - An error message describing what went wrong.</li>
             </ul>
         </dd>
@@ -50,7 +50,12 @@
         <li><strong>Red (ring)</strong> - Failed to fetch the redirection URL due to an error (e.g., missing list ID or email).</li>
     </ul>
     <h3>Details</h3>
-    <p>This node fetches the redirection URL for a specific subscription process (list) in the KlickTipp API. It requires the <code>sessionId</code> and <code>sessionName</code> from a successful login. Additionally, the <code>listId</code> (subscription process ID) and <code>email</code> must be provided in <code>msg.payload</code>.</p>
+    <p>
+		This node fetches the redirection URL for a specific subscription process (list) in the KlickTipp API.
+		It requires the <code>sessionId</code> and <code>sessionName</code> from a successful login.
+		Additionally, the <code>listId</code> (subscription process ID) and <code>email</code> must be provided in <code>msg.payload</code>.
+		On failure, <code>msg.payload</code> will contain <code>{ success: false }</code>, and an error message will be returned in <code>msg.error</code>.
+	</p>
 </script>
 
 <script type="text/javascript">
